--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -13,3 +13,19 @@ code{
 }
 h1,h2,h3,h4,h5,h6{margin-bottom: 0;}
 p{margin-bottom: 0;}
+
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+  }
+  
+  .icon-unfilled{
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+  }
